// Vitest Snapshot v1

exports[`test GifApp component > should add a new category 1`] = `
<div>
  <main
    class="bg-[#0a192f] p-[60px] min-h-screen"
  >
    <h1
      class="text-[#ccd6f6] text-6xl mb-5 font-black"
    >
      GifApp
    </h1>
    <form
      aria-label="form"
    >
      <input
        class="border border-[#64ffda] rounded px-3 py-2 text-[#ccd6f6] outline-none bg-transparent mb-16 w-full placeholder-[#ccd6f6]"
        placeholder="Search gifs..."
        type="text"
        value=""
      />
    </form>
    <h3
      class="text-[#ccd6f6] text-4xl mb-2 font-semibold"
    >
      Roger Federer
    </h3>
    <p
      class="text-[#ccd6f6] text-1xl"
    >
      Loading...
    </p>
    <div
      class="text-[#8791af] mb-12 flex flex-row flex-wrap justify-center"
    />
  </main>
</div>
`;

exports[`test GifApp component > should match GifApp component with Snapshot 1`] = `
<div>
  <main
    class="bg-[#0a192f] p-[60px] min-h-screen"
  >
    <h1
      class="text-[#ccd6f6] text-6xl mb-5 font-black"
    >
      GifApp
    </h1>
    <form
      aria-label="form"
    >
      <input
        class="border border-[#64ffda] rounded px-3 py-2 text-[#ccd6f6] outline-none bg-transparent mb-16 w-full placeholder-[#ccd6f6]"
        placeholder="Search gifs..."
        type="text"
        value=""
      />
    </form>
  </main>
</div>
`;

exports[`test GifApp component > should not add a new category if the category already exists 1`] = `
<div>
  <main
    class="bg-[#0a192f] p-[60px] min-h-screen"
  >
    <h1
      class="text-[#ccd6f6] text-6xl mb-5 font-black"
    >
      GifApp
    </h1>
    <form
      aria-label="form"
    >
      <input
        class="border border-[#64ffda] rounded px-3 py-2 text-[#ccd6f6] outline-none bg-transparent mb-16 w-full placeholder-[#ccd6f6]"
        placeholder="Search gifs..."
        type="text"
        value=""
      />
    </form>
    <h3
      class="text-[#ccd6f6] text-4xl mb-2 font-semibold"
    >
      Roger Federer
    </h3>
    <p
      class="text-[#ccd6f6] text-1xl"
    >
      Loading...
    </p>
    <div
      class="text-[#8791af] mb-12 flex flex-row flex-wrap justify-center"
    />
  </main>
</div>
`;

exports[`test GifApp component > should not add a new category if the input is empty 1`] = `
<div>
  <main
    class="bg-[#0a192f] p-[60px] min-h-screen"
  >
    <h1
      class="text-[#ccd6f6] text-6xl mb-5 font-black"
    >
      GifApp
    </h1>
    <form
      aria-label="form"
    >
      <input
        class="border border-[#64ffda] rounded px-3 py-2 text-[#ccd6f6] outline-none bg-transparent mb-16 w-full placeholder-[#ccd6f6]"
        placeholder="Search gifs..."
        type="text"
        value=""
      />
    </form>
  </main>
</div>
`;
